# desktop-pet

./: .gitignore  FEATURE_IDEAS.md  REFACTOR_PLAN.md  desktop-pet-plan.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
assets/sprites/: generate-sprites.html
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/: App.ts  drag.ts  index.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  pet.rs  tray.rs
src/behavior/: PetBehavior.ts  index.ts
src/behavior/animation/: AnimationMapping.ts  AnimationScheduler.ts  index.ts
src/behavior/core/: PetState.ts  PetStateMachine.ts  StateTransition.ts  index.ts
src/behavior/interaction/: ChasingController.ts  InteractionHandler.ts  PettingController.ts  index.ts
src/behavior/movement/: MovementController.ts  ScreenBoundDetector.ts  WalkDirector.ts  index.ts
src/core/: AppContainer.ts  EventBus.ts  PositionManager.ts  TaskScheduler.ts  index.ts
src/renderer/: DialogueManager.ts  FocusAccessory.ts  PetBehavior.ts  PetRenderer.ts  PomodoroTimer.ts  SpeechBubble.ts  SpriteRenderer.ts  TimeManager.ts  WeatherAccessory.ts  WeatherService.ts  index.ts
src/renderer/pet/: PetAppearance.ts  PetExpression.ts  PetRenderer.ts  index.ts
src/renderer/sprite/: FrameAnimator.ts  SpriteRenderer.ts  SpriteSheet.ts  index.ts
src/ui/: InteractionManager.ts  MenuManager.ts  index.ts
